--- a/inc/0-intro.tex
+++ b/inc/0-intro.tex
@@ -8,7 +8,7 @@
 Данная выделенная группа может намного эффективнее построить и управлять нестандартной облачной инфраструктурой, чем если компании будут просто продолжать добавлять дополнительные сервера и сервисы для поддержки центра обработки данных (ЦОД).
 
 Развитие информационного мира движется в сторону повсеместного распространения облачных вычислений, их технологий и сервисов.
-Очевидные преимущества данного подхода: \cite{telecom-world}
+Очевидные преимущества данного подхода \cite{telecom-world}:
 \begin{itemize}
   \item снижение затрат --- отсутствие необходимости покупки собственного оборудования, программного обеспечения (ПО), работы системного инженера;
   \item удаленный доступ --- возможность доступа к данным облака из любой точки мира, где есть доступ в глобальную сеть;
