--- a/inc/1-pz.tex
+++ b/inc/1-pz.tex
@@ -22,7 +22,7 @@
 
 Данная задача также рассматривается с точки зрения системного и вариантного анализа.
 
-Системный анализ включает в себя: \cite{sys-analyz}
+Системный анализ включает в себя \cite{sys-analyz}:
 \begin{itemize}
   \item системотехническое представление системы безопасности в виде <<черного ящика>>;
   \item описание входных и выходных данных;
@@ -31,7 +31,7 @@
   \item декомпозицию системы и описание связей между ее элементами.
 \end{itemize}
 
-Вариантный анализ произведен исходя выбранных критериев: \cite{var-analyz}
+Вариантный анализ произведен исходя выбранных критериев \cite{var-analyz}:
 \begin{itemize}
   \item раз;
   \item два;
