--- a/inc/2-literature.tex
+++ b/inc/2-literature.tex
@@ -5,18 +5,18 @@
 
 Облачные вычисления можно обозначить, как выделение ресурсов в облаке.
 В соответствии с NIST (Национальный институт стандартов и технологий), формальное определение облачных вычислений заключается в следующем:
-<<Облачные вычисления являются моделью обеспечения повсеместного, удобного доступа по требованию по сети, общему пулу конфигурируемых вычислительных ресурсов (например сетей, серверов, систем хранения данных (СХД), приложений и услуг), которые могут быстро и с минимальными усилиями предоставлены для управления поставщиком услуг>>. \cite{nist}
+<<Облачные вычисления являются моделью обеспечения повсеместного, удобного доступа по требованию по сети, общему пулу конфигурируемых вычислительных ресурсов (например сетей, серверов, систем хранения данных (СХД), приложений и услуг), которые могут быстро и с минимальными усилиями предоставлены для управления поставщиком услуг>> \cite{nist}.
 
 Согласно опросам института Понемона в 2016 году, среди 3476 респондентов в сфере информационной безопасности из Соединенных Штатов Америки, Великобритании, Австралии, Германии, Японии, Франции, Японии, России, Индии и Бразилии, 73\% респондентов так или иначе используют облачные вычисления в своей инфраструктуре.
-Особый рост внедрения облачных сервисов произошел в последние 2 года. \cite{gemalto}
+Особый рост внедрения облачных сервисов произошел в последние 2 года \cite{gemalto}.
 
-Хранение данных пользователей, почты и потребительских данных в облаке выросло в 2016 году по сравнению с 2014 годом.
+Хранение данных пользователей, почты и потребительских данных в облаке выросло в 2016 году по сравнению с 2014 годом (рис. \ref{cloud-data}).
 
-\addimghere{cloud-data}{1}{Сравнение использования облачных вычислений для хранения данных}{cloud-data}
+\addimg{cloud-data}{1}{Сравнение использования облачных вычислений для хранения данных}{cloud-data}
 
 Облачные вычисления являются результатом объединения большого количества технологий и связующего ПО для обеспечения ресурсов, необходимых для решения задачи, балансировки процессов, мониторинга, автоматизации и прочего.
 
-Основными отличиями облачного сервиса от классического являются:
+Основными отличиями облачного сервиса от классического являются (рис. \ref{cloud-tech}):
 \begin{itemize}
   \item виртуализация;
   \item оркестратор;
@@ -24,6 +24,8 @@
   \item портал самообслуживания;
   \item система тарификации и выставления счетов (биллинг).
 \end{itemize}
+
+\addimg{cloud-tech}{0.85}{Составные части облачных вычислений}{cloud-tech}
 
 В вычислениях, виртуализация является процессом создания виртуальной (не физической) версии чего-либо, в том числе аппаратных платформ виртуального компьютера, операционных систем, устройств хранения данных и вычислительных ресурсов.
 
@@ -49,17 +51,15 @@
 
 Система тарификации и выставления счетов является необходимым механизмом для определения финансовых затрат пользователя в соответствии с затраченными ресурсами клиента.
 
-\addimghere{cloud-tech}{1}{Составные части облачных вычислений}{cloud-tech}
-
 Провайдеры облачных услуг предлагают различные виды услуг, построенных поверх базового резервирования и освобождения ресурсов.
-Большинство из этих услуг попадают в одну из следующих категорий:
+Большинство из этих услуг попадают в одну из следующих категорий (рис. \ref{aas}):
 \begin{itemize}
   \item инфраструктура как услуга (IaaS);
   \item платформа как услуга (PaaS);
   \item программное обеспечение как услуга (SaaS).
 \end{itemize}
 
-\addimghere{aas}{1}{Модели обслуживания облака}{aas}
+\addimg{aas}{1}{Модели обслуживания облака}{aas}
 
 Большинство провайдеров используют различные виды веб-интерфейса, на основе которого можно построить необходимый стек технологий.
 Облачные провайдеры используют модель <<pay-as-you-go>>, в которой оплата производится только за время использования ресурсов.
@@ -74,67 +74,31 @@
   \item надежность, ресурсы могут быть размещены в разных дата-центрах, для обеспечения повышенной надежности.
 \end{itemize}
 
-Как правило, облако может быть развернуто согласно следующим моделям:
+Как правило, облако может быть развернуто согласно следующим моделям (рис. \ref{clouds}):
 \begin{itemize}
   \item частное облако;
   \item публичное облако;
+  \item общественное облако;
   \item гибридное облако.
 \end{itemize}
 
-\addimghere{pub-priv-hybr}{1}{Модели развертывания облака}{pub-priv-hybr}
+\addimg{clouds}{1}{Модели развертывания облака}{clouds}
 
-Частное облако, эксплуатируется исключительно одной организацией, оно может быть размещено внутри или снаружи сети организации и управляться внутренними командами или третьей стороной.
-Частное облако можно построить с использованием такого программного обеспечения, как OpenStack;
+Частное облако эксплуатируется исключительно одной организацией, оно может быть размещено внутри или снаружи сети организации и управляться внутренними командами или третьей стороной.
+Частное облако можно построить с использованием такого программного обеспечения, как OpenStack.
 
 Публичное облако доступно для всех пользователей, любой может использовать его после предоставления данных кредитной карты.
-AWS (Amazon Web Services) и GCE (Google Compute Engine) являются примерами публичных облаков;
+AWS (Amazon Web Services) и GCE (Google Compute Engine) являются примерами публичных облаков.
 
-Гибридное облако, является результатом объединения публичного и частных облаков.
+Гибридное облако является результатом объединения публичного и частных облаков.
 Гибридное облако может быть использовано для хранения секретной информации о частном облаке, предлагая при этом услуги на основе этой информации из публичного облака.
 
+Общественное облако, как правило, предназначено для сообщества или организации.
 
+--------------------------
 
-
-
-
----
-
-Актуальность: облака везде, облака нужны всем, не только бизнес-клиентам, но и обычным людям.
-
-Т.к. популярность облаков появилась сравнительно недавно и она стремительно развивается, не всегда успевают учесть все аспекты безопасности.
-
-Также из-за того, что облако состоит из большого количества ПО на различных уровнях, нужно учитывать все уязвимости, так как они могут всплыть на каждом из уровней.
-
-Мысли:
-
-* клиенты слабо представляют насколько защищены облака, поэтому предпочитают частное облаков, взамен публичного, не доверяют провайдеру
-
-* основные аспекты облаков: мониторинг, управление, безопасность, доступность
-
-* если надо добавить часть по экономике - файл 124.pdf
-
-* по поводу иаас, преимущества понятны, а вот минусы в том, что если получают доступ к хост-ноде, то все, также это может быть изнутри, например уязвимость на гипервизоре
-
-* конкретные проблемы с табличками описаны тут 1608.08787v1.pdf
-
-* файл cloud-security-study-report.pdf конкретный отчет сравнение использования облаков в 2016 году по сравнению с 2014
-
-* в файле informatsionnaya-bezopasnost-pri-oblachnyh-vychisleniyah-problemy-i-perspektivy.pdf хорошо расписан вопрос по стандартизации облаков, также кратко написано про риски использования облаков
-
-* тут тоже про стандарты psta2011-4-17-31.pdf
-
-* в файле str50.pdf рассказывакется про проблемы в России, проблемы с точки зрения инф. безопасности
-
-* реальные опросы от интела 2012г, которые рассказывают, что препятствуют уходу в облака, файл whats-holding-back-the-cloud-peer-research-report.pdf
-
-* хорошая презентация Zegzhda-PD-supernova-2.pdf краткие тезисы, примеры картинок, модель безопасности даже есть
-
----
-
-
-
-\addimghere{gartner-providers}{1}{Тестовая картиночка}{gartner-providers}
-\addimghere{gartner-virt}{1}{Тестовая картиночка}{gartner-virt}
+\addimg{gartner-providers}{1}{Тестовая картиночка}{gartner-providers}
+\addimg{gartner-virt}{1}{Тестовая картиночка}{gartner-virt}
 
 + что такое облака
 
