Ссылки на глоссарий

--- a/inc/0-glossary.tex
+++ b/inc/0-glossary.tex
@@ -1,35 +1,35 @@
 \anonsection{Перечень сокращений и условных обозначений}
 
-ЦОД --- центр обработки данных
+\hypertarget{dc}{ЦОД --- центр обработки данных}
 
-ПО --- программное обеспечение
+\hypertarget{soft}{ПО --- программное обеспечение}
 
-GNU --- проект по разработке свободного программного обеспечения
+\hypertarget{gnu}{GNU --- проект по разработке свободного программного обеспечения}
 
-GPL --- General Public License, универсальная общественная лицензия
+\hypertarget{gpl}{GPL --- General Public License, универсальная общественная лицензия}
 
-ОЗУ --- оперативное запоминающее устройство
+\hypertarget{ram}{ОЗУ --- оперативное запоминающее устройство}
 
-SSD --- Solid State Drive, твердотельный накопитель
+\hypertarget{ssd}{SSD --- Solid State Drive, твердотельный накопитель}
 
-NIST --- National Institute of Standards and Technology, Национальный институт стандартов и технологий
+\hypertarget{nist}{NIST --- National Institute of Standards and Technology, Национальный институт стандартов и технологий}
 
-СХД --- система хранения данных
+\hypertarget{storage}{СХД --- система хранения данных}
 
-SaaS --- Software as a Service, программное обеспечение как услуга
+\hypertarget{saas}{SaaS --- Software as a Service, программное обеспечение как услуга}
 
-PaaS --- Platform as a Service, платформа как услуга
+\hypertarget{paas}{PaaS --- Platform as a Service, платформа как услуга}
 
-IaaS --- Infrastructure as a Service, инфраструктура как услуга
+\hypertarget{iaas}{IaaS --- Infrastructure as a Service, инфраструктура как услуга}
 
-AWS --- Amazon Web Services
+\hypertarget{os}{ОС --- операционная система}
 
-GCE --- Google Compute Engine
+\hypertarget{soa}{SOA --- service-oriented architecture, сервис-ориентированная архитектура}
 
-ОС --- операционная система
+\hypertarget{bpel}{BPEL --- Business Process Execution Language, язык описания бизнес-процессов}
 
-SOA --- service-oriented architecture, сервис-ориентированная архитектура
+\hypertarget{aws}{AWS --- Amazon Web Services}
 
-BPEL --- Business Process Execution Language, язык описания бизнес-процессов
+\hypertarget{gce}{GCE --- Google Compute Engine}
 
 \clearpage
