--- a/inc/2-literature.tex
+++ b/inc/2-literature.tex
@@ -4,8 +4,8 @@
 Позже, оно было использовано для изображения Интернет в компьютерных сетевых диаграммах и схемах.
 
 Облачные вычисления можно обозначить, как выделение ресурсов в облаке.
-В соответствии с NIST (Национальный институт стандартов и технологий), формальное определение облачных вычислений заключается в следующем:
-<<Облачные вычисления являются моделью обеспечения повсеместного, удобного доступа по требованию по сети, общему пулу конфигурируемых вычислительных ресурсов (например сетей, серверов, систем хранения данных (СХД), приложений и услуг), которые могут быстро и с минимальными усилиями предоставлены для управления поставщиком услуг>> \cite{nist}.
+В соответствии с \hyperlink{nist}{NIST} (Национальный институт стандартов и технологий), формальное определение облачных вычислений заключается в следующем:
+<<Облачные вычисления являются моделью обеспечения повсеместного, удобного доступа по требованию по сети, общему пулу конфигурируемых вычислительных ресурсов (например сетей, серверов, систем хранения данных (\hyperlink{storage}{СХД}), приложений и услуг), которые могут быстро и с минимальными усилиями предоставлены для управления поставщиком услуг>> \cite{nist}.
 
 Согласно опросам института Понемона в 2016 году, среди 3476 респондентов в сфере информационной безопасности из Соединенных Штатов Америки, Великобритании, Австралии, Германии, Японии, Франции, Японии, России, Индии и Бразилии, 73\% респондентов так или иначе используют облачные вычисления в своей инфраструктуре.
 Особый рост внедрения облачных сервисов произошел в последние 2 года \cite{gemalto}.
@@ -30,7 +30,7 @@
 В вычислениях, виртуализация является процессом создания виртуальной (не физической) версии чего-либо, в том числе аппаратных платформ виртуального компьютера, операционных систем, устройств хранения данных и вычислительных ресурсов.
 
 Виртуализация может быть предоставлена на различных аппаратных и программных уровнях, таких как центральный процессор, диск, память, файловые системы и прочее.
-Чаще всего виртуализация используется для создания виртуальных машин и эмуляции различного оборудования для последующей установки операционных систем (ОС) на них.
+Чаще всего виртуализация используется для создания виртуальных машин и эмуляции различного оборудования для последующей установки операционных систем (\hyperlink{os}{ОС}) на них.
 
 Виртуальные машины создаются на основе гипервизора, который работает поверх операционной системы хост-компьютера (физического компьютера, не виртуального).
 С помощью гипервизора возможна эмуляция аппаратных средств, таких как процессор, диск, сеть, память, а также установка гостевых операционных систем на них.
@@ -41,7 +41,7 @@
 Большинство современных процессоров и гипервизоров также поддерживают вложенную виртуализацию, что позволяет создавать виртуальные машины внутри виртуальных машин.
 
 Оркестратор является механизмом, выполняющий набор заданных операций по шаблону.
-В сервис-ориентированной архитектуре (SOA), оркестровка сервисов реализуется согласно стандарту BPEL (Business Process Execution Language).
+В сервис-ориентированной архитектуре (\hyperlink{soa}{SOA}), оркестровка сервисов реализуется согласно стандарту \hyperlink{bpel}{BPEL} (Business Process Execution Language).
 Это позволяет автоматизировать процессы создания услуг клиентов в облачной среде.
 
 Список услуг как предоставляется пользователю в виде шаблонов готовых тарифов на портале самообслуживания, однако существуют и так называемые <<конфигураторы>>, которые позволяют пользователю создать шаблон индивидуально.
@@ -88,7 +88,7 @@
 Частное облако можно построить с использованием такого программного обеспечения, как OpenStack.
 
 Публичное облако доступно для всех пользователей, любой может использовать его после предоставления данных кредитной карты.
-AWS (Amazon Web Services) и GCE (Google Compute Engine) являются примерами публичных облаков.
+\hyperlink{aws}{AWS} (Amazon Web Services) и \hyperlink{gce}{GCE} (Google Compute Engine) являются примерами публичных облаков.
 
 Гибридное облако является результатом объединения публичного и частных облаков.
 Гибридное облако может быть использовано для хранения секретной информации о частном облаке, предлагая при этом услуги на основе этой информации из публичного облака.
