--- a/inc/5-description.tex
+++ b/inc/5-description.tex
@@ -89,6 +89,7 @@ ntp - только на винде позволяет устроить ддос
 - LXC CVE-2016-8649 https://www.opennet.ru/opennews/art.shtml?num=45573
 эксплоит есть, но у меня не работает на 11 строчке
 
+* https://habrahabr.ru/company/pt/blog/318050/ уязвимость в нагиосе
 ---
 
 Тестовый стенд для всего этого.
