--- a/main.tex
+++ b/main.tex
@@ -56,12 +56,8 @@
 % Список иллюстративного материала
 \phantomsection
 \listoffigures
-\addcontentsline{toc}{section}{Список иллюстративного материала}
+\addcontentsline{toc}{section}{\listfigurename}
 \clearpage
-
-
-
-%\input{inc/0-illustrations} % Список иллюстративного материала
 
 % Приложения
 %\input{inc/a-app} % НАЗВАНИЕ ПРИЛОЖЕНИЯ 1
