--- a/inc/1-pz.tex
+++ b/inc/1-pz.tex
@@ -9,14 +9,14 @@
   \item специфика применений облачных вычислений в России;
   \item проблемы безопасности облачных вычислений;
   \item решение проблем безопасности облаков;
-  \item практическое применение уязвимостей в облачной среде, с использованием программ, распространяющихся под свободными лицензиями, например GNU GPL.
+  \item практическое применение уязвимостей в облачной среде, с использованием программ, распространяющихся под свободными лицензиями, например \hyperlink{gnu}{GNU} \hyperlink{gpl}{GPL}.
 \end{itemize}
 
 Для применения практических навыков исследования уязвимостей необходима аппаратная платформа со следующими характеристиками:
 \begin{itemize}
   \item процессор 4xIntel Core\textregistered~i3 @ 2.3GHz с поддержкой аппаратной виртуализации;
-  \item минимальный объем ОЗУ 8 Гб, рекомендуемый --- не менее 10 Гб;
-  \item минимум 15 Гб места на жестком диске (SSD);
+  \item минимальный объем \hyperlink{ram}{ОЗУ} 8 Гб, рекомендуемый --- не менее 10 Гб;
+  \item минимум 15 Гб места на жестком диске (\hyperlink{ssd}{SSD});
   \item операционная система Ubuntu 16.04,CentOS 7 или Debian 8 GNU/Linux.
 \end{itemize}
 
