--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -33,6 +33,20 @@
     The 2016 Global Cloud Data Security Study.
     Ponemon Insitute LLC, 2016. -- 40p.
 
+\bibitem{itmo}
+    Беккер М.Я., Гатчин Ю.А., Кармановский Н.С., Терентьев А.О., Федоров Д.Ю.
+    Информационная безопасность при облачных вычислениях: проблемы и перспективы /
+    М.Я. Беккер, Ю.А. Гатчин, Н.С. Кармановский, А.О. Терентьев, Д.Ю. Федоров //
+    Научно-технический вестник Санкт-Петербургского государственного университета информационных технологий, механики и оптики. -- 2011. - №1(71).
+    -- С.97-102.
+
+\bibitem{psta}
+    Емельянова Ю.Г., Фраленко В.П.
+    Анализ проблем и перспективы создания интеллектуальной системы обнаружения и предотвращения сетевых атак на облачные вычисления /
+    Ю.Г. Емельянова, В.П. Фраленко //
+    Программные системы: теория и приложения. -- 2011. - №4(8)
+    -- С.17-31.
+
 \end{thebibliography}
 \endgroup
 
