--- a/inc/0-glossary.tex
+++ b/inc/0-glossary.tex
@@ -12,7 +12,7 @@
 
 \hypertarget{ssd}{SSD --- Solid State Drive, твердотельный накопитель}
 
-\hypertarget{nist}{NIST --- National Institute of Standards and Technology, Национальный институт стандартов и технологий}
+\hypertarget{nist}{NIST --- National Institute of Standards and Technology, Национальный Институт стандартов и технологий}
 
 \hypertarget{storage}{СХД --- система хранения данных}
 
@@ -31,5 +31,35 @@
 \hypertarget{aws}{AWS --- Amazon Web Services}
 
 \hypertarget{gce}{GCE --- Google Compute Engine}
+
+\hypertarget{bsi}{BSI --- British Standarts Institution, Британский институт стандартов}
+
+\hypertarget{giac}{GIAC --- Global Information Assurance Certification}
+
+\hypertarget{omg}{OMG --- Object Management Group}
+
+\hypertarget{it}{ИТ --- информационные технологии}
+
+\hypertarget{csa}{CSA --- Cloud Security Alliance}
+
+\hypertarget{dmtf}{DMTF --- Distributed Management Task Force}
+
+\hypertarget{snia}{SNIA --- Storage Networking Industry Association}
+
+\hypertarget{ogf}{OGF --- Open Grid Forum}
+
+\hypertarget{occ}{OCC --- Open Cloud Consortium}
+
+\clearpage
+
+\hypertarget{oasis}{OASIS --- Organization for the Advancement of Structured Information Standards}
+
+\hypertarget{ietf}{IETF --- Internet Engineering Task Force, инженерный совет Интернета}
+
+\hypertarget{itu}{ITU --- International Telecommunications Union, Международный институт электросвязи}
+
+\hypertarget{etsi}{ETSI --- European Telecommunications Standards Institute, Европейский институт телекоммуникационных стандартов}
+
+\hypertarget{idps}{IDPS --- Intrusion Detection and Prevention Systems, руководство по системам обнаружения и предотвращения вторжений}
 
 \clearpage
