--- a/inc/2-literature.tex
+++ b/inc/2-literature.tex
@@ -95,6 +95,87 @@
 
 Общественное облако, как правило, предназначено для сообщества или организации.
 
+Поскольку технологии облачных вычислений относительно недавно начали свой путь к рынку массового потребления, одной из проблем обеспечения безопасности является отсутствие общепринятых стандартов в сфере предоставления облачных услуг.
+Таким образом, в вопросах обеспечения безопасности, также не существует стандартов.
+Данныя проблема все еще находится в процессе решения и развивается по трем основным направлениям.
+
+Во-первых, облачные провайдеры создают собственные корпоративные стандарты, которые чаще всего публично не оглашаются.
+В таком случае потребитель может полагаться исключительно на репутацию компании, предоставляющей облачные услуги.
+Среди таких компаний можно выделить Google, Amazon, Microsoft, IBM, VMWare, Oracle и прочие.
+Однако все же встречаются некоторые компании, такие как IBM, которые участвуют в открытии облачных стандартов.
+
+Во-вторых, компании адаптируют свои услуги согласно существующим и устоявшимся стандартам безопасности (\hyperlink{giac}{GIAC}, \hyperlink{bsi}{BSI} и прочие), проходят соответствующие сертификации с последующим получием свидетельства.
+Получение подобных сертификатов актуально в плане получения государственных и общественных заказов в долгосрочной перспективе \cite{itmo}.
+
+В-третьих, различные правительственные, коммерческие и общественные организации принимают всяческие усилия по выработке требований к созданию безопасных облачных служб обработки информации.
+
+Рабочая группа Object Management Group (\hyperlink{omg}{OMG}) в 2009 году была инициатором создания Cloud Standarts Summit.
+Целью создания встречи является развитие информационных технологий (\hyperlink{it}{ИТ}) и согласование стандартов по проблемам государственных облачных сред.
+В результате были созданы следующие рабочие группы:
+\begin{itemize}
+  \item Cloud Security Alliance (\hyperlink{csa}{CSA});
+  \item Distributed Management Task Force (\hyperlink{dmtf}{DMTF});
+  \item Storage Networking Industry Association (\hyperlink{snia}{SNIA});
+  \item Open Grid Forum (\hyperlink{ogf}{OGF});
+  \item Open Cloud Consortium (\hyperlink{occ}{OCC});
+  \item Organization for the Advancement of Structured Information Standards (\hyperlink{oasis}{OASIS});
+  \item TM Forum;
+  \item Internet Engineering Task Force (\hyperlink{ietf}{IETF});
+  \item International Telecommunications Union (\hyperlink{itu}{ITU});
+  \item European Telecommunications Standards Institute (\hyperlink{etsi}{ETSI});
+  \item National Institute of Standards and Technology (NIST);
+  \item Object Management Group (OMG).
+\end{itemize}
+
+Наиболее известны достижения NIST, CSA, OASIS, а так же организации Open Data Center Alliance.
+
+Cloud Security Alliance является некоммерческой организацией, созданной с целью продвижения идеи обеспечения безопасности облачных вычислений, а также для повышения уровня осведомленности по данной тематике как облачных поставщиков услуг, так и потребителей.
+Ряд основных задач, выделаемых организацией CSA:
+\begin{itemize}
+  \item поддержка взаимоотношений потребителей и поставщиков услуг в требованиях безопасности и контроля качества;
+  \item независимые исследования в части защиты;
+  \item разработка и внедрение программ повышения осведомленности и обеспечению безопасности;
+  \item разработка руководств и методических рекомендаций по обеспечению безопасности.
+\end{itemize}
+
+Руководство по безопасности критических областей в области облачных вычислений (Security Guidance for Critical Areas of Focus in Cloud Computing) покрывает основные аспекты и дает рекомендации потребителям облачных сред в тринадцати стратегически важных областях:
+\begin{itemize}
+  \item архитектурные решения сред облачных вычислений;
+  \item государственное и корпоративное управление рисками;
+  \item легальное и электронное открытие;
+  \item соответствие техническим условиям и отчетность;
+  \item управление жизненным циклом информации;
+  \item портативность и совместимость;
+  \item традиционная безопасность, непрерывность деятельности и восстановление в аварийных ситуациях;
+  \item работа центра обработки данных;
+  \item реакция на риски, уведомление и коррекционное обучение;
+  \item прикладная безопасность;
+  \item криптография и управление ключами;
+  \item идентификация и управление доступом;
+  \item виртуализация.
+\end{itemize}
+
+OASIS стимулирует развитие, сведение и принятие открытых стандартов для глобального информационного общества. Являясь источником многих современных основополагающих стандартов, организация видит облачные вычисления как естественное расширение сервисноориентированной архитектуры и моделей управления сетью \cite{psta}.
+Технические агенты OASIS –– это набор участников, многие из которых активно участвуют в построении моделей облаков, профилей и расширений на существующие стандарты.
+Примерами стандартов, разработанных в области политик безопасности, доступа и идентификации, являются OASIS SAML, XACML, SPML, WS-SecurityPolicy, WS-Trust, WS-Federation, KMIP и ORMS.
+
+Организация Open Data Center Alliance объявила о публикации двух моделей использования (usage models), призванных снять наиболее значимые препятствия на пути внедрения облачных вычислений.
+Первая модель использования называется <<The Provider Security Assurance>> (обеспечение безопасности на стороне провайдера).
+В ней описаны требования к гранулированному описанию элементов обеспечения безопасности, которые должны предоставить поставщики услуг.
+
+Вторая модель использования <<The Security Monitoring>> (Мониторинг соответствия требованиям безопасности) описывает требования к элементам, которые обеспечивают возможность мониторинга безопасности облачных сервисов в реальном времени.
+В совокупности две модели использования формируют набор требований, который может стать основой для создания стандартной модели обеспечения безопасности облачных сервисов и осуществления мониторинга этих сервисов в реальном времени.
+
+Национальный Институт стандартов и технологий вместе с Американским национальным институтом стандартов (ANSI) участвует в разработке стандартов и спецификаций к программным решениям, используемым как в государственном секторе США, так и имеющим коммерческое применение.
+Сотрудники NIST разрабатывают руководства, направленные на описание архитектуры облака, безопасность и стратегии использования, в числе которых руководство по системам обнаружения и предотвращения вторжений, руководство по безопасности и защите персональных данных при использовании публичных систем облачных вычислений.
+
+В руководстве по системам обнаружения и предотвращения вторжений (NIST Guide to Intrusion Detection and Prevention Systems) даются характеристики технологий \hyperlink{idps}{IDPS} (Intrusion Detection and Prevention Systems) и рекомендации по их проектированию, внедрению, настройке, обслуживанию, мониторингу и поддержке.
+Виды технологий IDPS различаются в основном по типам событий, за которыми проводится наблюдение, и по способам их применения.
+Рассмотрены следующие четыре типа IDPS-технологий: сетевые, беспроводные, анализирующие поведение сети и централизованные.
+
+В руководстве по безопасности и защите персональных данных при использовании публичных систем облачных вычислений (Guidelines on Security and Privacy in Public Cloud Computing) в том числе дается обзор проблем безопасности и конфиденциальности, имеющих отношение к среде облачных вычислений: обнаружение атак на гипервизор, цели атак, отдельно рассматриваются распределенные сетевые атаки.
+
+
 --------------------------
 
 \addimg{gartner-providers}{1}{Тестовая картиночка}{gartner-providers}
@@ -110,7 +191,7 @@
 
 + гибрдное/публ/прив облако тут картинка
 
-* стандартизация nist... тут можно табличку
++ стандартизация nist...
 
 * облачные провайдеры тут табличка/картинка
 
