Добавил информацию по провайдерам

--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -47,6 +47,12 @@
     Программные системы: теория и приложения. -- 2011. - №4(8)
     -- С.17-31.
 
+\bibitem{xen}
+    Chisnall, D.
+    The Definitive Guide to the Xen Hypervisor /
+    1st Edition //
+    Prentice Hall Open Source Software Development. -- 2007. -- 320p.
+
 \end{thebibliography}
 \endgroup
 
