--- a/inc/0-glossary.tex
+++ b/inc/0-glossary.tex
@@ -12,7 +12,7 @@
 
 \hypertarget{ssd}{SSD --- Solid State Drive, твердотельный накопитель}
 
-\hypertarget{nist}{NIST --- National Institute of Standards and Technology, Национальный Институт стандартов и технологий}
+\hypertarget{nist}{NIST --- National Institute of Standards and Technology, Национальный институт стандартов и технологий}
 
 \hypertarget{storage}{СХД --- система хранения данных}
 
@@ -61,5 +61,17 @@
 \hypertarget{etsi}{ETSI --- European Telecommunications Standards Institute, Европейский институт телекоммуникационных стандартов}
 
 \hypertarget{idps}{IDPS --- Intrusion Detection and Prevention Systems, руководство по системам обнаружения и предотвращения вторжений}
+
+\hypertarget{ec2}{EC2 --- Elastic Compute Cloud, веб-сервис компании Amazon, предоставляющий вычислительные мощности в облаке}
+
+\hypertarget{api}{API --- Application Programming Interface, интерфейс создания приложений}
+
+\hypertarget{vcpu}{vCPU --- Virtual Central Processing Unit, виртуальное процессорное ядро}
+
+\hypertarget{ami}{AMI --- Amazon Machine Images}
+
+\hypertarget{ebs}{EBS --- Elastic Block Store, сервис постоянного хранилища блочного уровня для использования с инстансами Amazon}
+
+\hypertarget{iot}{IoT --- Internet of Things, интернет вещей}
 
 \clearpage
