--- a/inc/5-description.tex
+++ b/inc/5-description.tex
@@ -4,6 +4,9 @@
 
 Все это должно быть с подпунктами.
 
+\addimg{gartner-providers}{1}{Тестовая картиночка}{gartner-providers}
+\addimg{gartner-virt}{1}{Тестовая картиночка}{gartner-virt}
+
 ---
 
 Актуальность: облака везде, облака нужны всем, не только бизнес-клиентам, но и обычным людям.
