Добавил инфу по рос. рынку

--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -53,6 +53,20 @@
     1st Edition //
     Prentice Hall Open Source Software Development. -- 2007. -- 320p.
 
+\bibitem{minsvyaz}
+    Обработка и хранение персональных данных в РФ. Изменения с 1 сентября 2015 года
+    [Электронный ресурс] //
+    Минкомсвязь России
+    URL: http://minsvyaz.ru/ru/personaldata/
+    (дата обращения: 30.12.2016)
+
+\bibitem{cnews}
+    Облачные сервисы 2016
+    [Электронный ресурс] //
+    CNews Analytics
+    URL: http://www.cnews.ru/reviews/oblachnye\_servisy\_2016/
+    (дата обращения: 30.12.2016)
+
 \end{thebibliography}
 \endgroup
 
