Исправление неточностей и опечаток

--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -54,9 +54,9 @@
     Prentice Hall Open Source Software Development. -- 2007. -- 320p.
 
 \bibitem{minsvyaz}
-    Обработка и хранение персональных данных в РФ. Изменения с 1 сентября 2015 года
-    [Электронный ресурс] //
-    Минкомсвязь России
+    Федеральный закон от 21 июля 2014 г. № 242-ФЗ <<О внесении изменений в отдельные законодательные акты Российской Федерации в части уточнения порядка обработки персональных данных в информационно-телекоммуникационных сетях>> //
+    Минкомсвязь России //
+    Опубликован 12.02.2016 на официальном интернет-портале Министерства связи и массовых коммуникаций Российской Федерации
     URL: http://minsvyaz.ru/ru/personaldata/
     (дата обращения: 30.12.2016)
 
