--- a/inc/0-annotation.tex
+++ b/inc/0-annotation.tex
@@ -4,15 +4,15 @@
 
 Ключевые слова: безопасность, облачные вычисления, виртуализация, уязвимости, защита информации, стандартизация.
 
-В данной выпускной квалификационной работе магистра рассмотрены проблемы обеспечения безопасности облачных технологий.
-Для достижения поставленной цели был необходим детальный анализ работы облачных вычислений, мировых стандартов безопасности для облачных провайдеров, а также возможность использования уязвимостей в облачной среде с целью компрометации данных пользователей или данных облачного провайдера.
+В данной выпускной квалификационной работе магистра рассмотрены проблемы обеспечения безопасности в сфере облачных технологий????.
+Для достижения поставленной цели был необходим детальный анализ работы облачных провайдеров, мировых стандартов безопасности для облачных провайдеров, а также возможность использования уязвимостей в облачной среде с целью компрометации данных пользователей или данных облачного провайдера.
 
 Актуальность темы.
 В настоящее время наблюдается стремительное развитие облачных технологий, однако для эффективной работы облачной инфраструктуры требуется эффективная структура и организация.
 Зачастую небольшая команда, проектирующая облачную инфраструктуру не всегда может полностью учесть все аспекты безопасности, так как нет единого документа, стандартизующего механизмы обеспечения безопасности в облачной среде.
-Особенно остро, вопрос безопасности встал в последнее время, в связи с обнаружением большого количества опасных уязвимостей в программном обеспечении, используемом облачными провайдерами.
+Особенно остро вопрос безопасности встал в последнее время, в связи с обнаружением большого количества опасных уязвимостей в программном обеспечении, используемом облачными провайдерами.
 
-Конечная цель проектирования --- анализ проблем безопасности в облачных технологиях, актуальных уязвимостей в программном обеспечении, а также эксплуатация наиболее опасных уязвимости в данной среде.
+Конечная цель проектирования --- анализ проблем безопасности в облачных технологиях???, актуальных уязвимостей в программном обеспечении, а также эксплуатация наиболее опасных уязвимости в данной среде.
 
 Выпускная квалификационная работа магистра изложена на ??? листах, включает ??? таблиц, ??? рисунков, ??? приложений, ??? литературных источников.
 
