--- a/inc/1-pz.tex
+++ b/inc/1-pz.tex
@@ -1,13 +1,13 @@
 \section{Постановка задачи}
 
-Конечной задачей выпускной квалификационной работы магистра на тему <<Исследование проблем безопасности облачных вычислений>> является подробный анализ стандартов безопасности облачных вычислений, варианты решения данных проблем, а также технические возможности практической эксплуатации уязвимостей на нескольких уровнях работы облачной инфраструктуры.
+Конечной задачей выпускной квалификационной работы магистра на тему <<Исследование безопасности облачных сред>> является подробный анализ стандартов безопасности облачных вычислений, варианты решения данных проблем, а также технические возможности практической эксплуатации уязвимостей на нескольких уровнях работы облачной инфраструктуры.
 
 Исследования должны состоять из следующих частей:
 \begin{itemize}
-  \item составные части облачной инфраструктуры;
+  \item обзор составных частей облачной инфраструктуры;
   \item анализ технологий используемых облачными провайдерами, необходимых для построения облачной инфраструктуры;
   \item специфика применений облачных вычислений в России;
-  \item проблемы безопасности облачных вычислений;
+  \item исследование проблемы безопасности облачных вычислений;
   \item решение проблем безопасности облаков;
   \item практическое применение уязвимостей в облачной среде, с использованием программ, распространяющихся под свободными лицензиями, например \hyperlink{gnu}{GNU} \hyperlink{gpl}{GPL}.
 \end{itemize}
@@ -17,7 +17,7 @@
   \item процессор 4xIntel Core\textregistered~i3 @ 2.3GHz с поддержкой аппаратной виртуализации;
   \item минимальный объем \hyperlink{ram}{ОЗУ} 8 Гб, рекомендуемый --- не менее 10 Гб;
   \item минимум 15 Гб места на жестком диске (\hyperlink{ssd}{SSD});
-  \item операционная система Ubuntu 16.04,CentOS 7 или Debian 8 GNU/Linux.
+  \item операционная система Ubuntu 16.04, CentOS 7 или Debian 8 GNU/Linux.
 \end{itemize}
 
 Данная задача также рассматривается с точки зрения системного и вариантного анализа.
